# ebook-maker

./: .env.example  .gitignore  README.md  architecture.md  install.sh  pyproject.toml  run.sh  test.sh
.github/: copilot-instructions.md
openspec/: config.yaml
openspec/changes/archive/2026-04-29-reorder-note-action-menu/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-reorder-note-action-menu/specs/note-action-menu/: spec.md
openspec/specs/note-action-menu/: spec.md
src/ebook_maker/: __init__.py  main.py
src/ebook_maker/assets/: epub.css  line-numbers.lua  obsidian-callouts.lua  pdf.css  syntax-alias.lua
src/ebook_maker/converter/: converter.py  pdf_converter.py
src/ebook_maker/core/: models.py  settings.py
src/ebook_maker/scanner/: scanner.py
src/ebook_maker/sender/: email_sender.py
src/ebook_maker/ui/: console.py  menu.py
tests/: test_main.py
tests/converter/: test_converter.py
tests/core/: test_models.py  test_settings.py
tests/scanner/: test_scanner.py
tests/sender/: test_email_sender.py
tests/ui/: test_menu_actions.py  test_ui.py
