[project]
name = "ebook-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Marcelo Panasiti", email = "juanpanasiti@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
]

[project.scripts]
ebook-maker = "ebook_maker:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
