[project]
name = "ebook-maker"
version = "0.1.0"
description = "EPUB generator from Markdown files"
readme = "README.md"
authors = [
    { name = "Juan Marcelo Panasiti", email = "juanpanasiti@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypandoc>=1.16.2",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "weasyprint>=68.1",
]

[project.scripts]
ebook-maker = "ebook_maker:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv-build]
data-files = {}
module-data = { "ebook_maker" = ["assets/*.css", "assets/*.lua"] }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
